Upgrade quality plugin, and Java to 21